# rpccgo

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  doc.go  go.mod  go.sum  go.work  go.work.sum  learnings.md  mise.toml  release_verification_test.go
cgotest/: AGENTS.md  README.md  Taskfile.yml  build-cgo-connect-suffix.sh  build-cgo-connect.sh  build-cgo-grpc.sh  build-cgo-mix.sh  build-connect-suffix.sh  build-connect.sh  build-grpc.sh  build-mix.sh  go.mod  run-adaptor-tests.sh  run-c-tests.sh  test.sh
cmd/: AGENTS.md
examples/android-foreground-service-so/android_app/app/src/main/cpp/: CMakeLists.txt
examples/android-foreground-service-so/android_app/app/src/main/cpp/rpccgo/: foreground_service.foreground_service_demo.jni.cpp
examples/flutter-shared-so/flutter_app/android/app/src/main/cpp/: CMakeLists.txt
examples/flutter-shared-so/flutter_app/android/app/src/main/cpp/rpccgo/: rpccgo.jni.cpp  rpccgo.jni.h  shared_so.android_device.jni.cpp  shared_so.flutter_device.jni.cpp  shared_so.shared_so_demo.jni.cpp
openspec/: config.yaml
rpcruntime/: AGENTS.md  active_slot.go  active_slot_test.go  background_context.go  background_context_test.go  cgo_message_stream.go  cleanup_scheduler.go  cleanup_scheduler_test.go  connect_stream.go  connect_stream_test.go  dispatch_errors.go  dispatcher.go  dispatcher_contract.go  dispatcher_contract_test.go  dispatcher_foundation_test.go  dispatcher_stream_test.go  dispatcher_test.go  doc.go  errors.go  errors_test.go  errors_ttl.go  free.go  grpc_stream.go  grpc_stream_test.go  integration_test.go  length.go  length_test.go  (+26 more)
(+497 files in other folders)
